--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "devDependencies": {
     "@types/bun": "latest",
     "@types/express": "^5.0.0",
-    "@types/spotify-web-api-node": "^5.0.11"
+    "@types/morgan": "^1.9.9",
+    "@types/spotify-web-api-node": "^5.0.11",
+    "morgan": "^1.10.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
