--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-CLIENT_ID=tu_spotify_client_id
-CLIENT_SECRET=tu_spotify_client_secret
-REDIRECT_URI=http://localhost:3000/callback
-SESSION_SECRET=un_secreto_para_sesiones
-REDIS_HOST=localhost
-REDIS_PORT=6379
+SPOTIFY_CLIENT_ID=xxxxxx
+SPOTIFY_CLIENT_SECRET=xxxxxxxx
+SPOTIFY_REDIRECT_URI=http://localhost:1225/callback
+REDIS_HOST=redis://localhost:6379
+REDIS_PASSWORD=12345
+EXPRESS_PORT=12345
+GEMINI_API_KEY=xczxd
