--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "openai": "^4.71.0",
     "redis": "^4.7.0",
     "spotify-web-api-node": "^5.0.2",
     "sqlite3": "^5.1.7"
